fix header on small screen size

--- a/css/style.css
+++ b/css/style.css
@@ -626,7 +626,7 @@ footer {
     header {
       height: 1200px;
       padding: 0;
-      overflow: hidden;
+      /*overflow: hidden;*/
     }
 
     header p {
@@ -762,6 +762,7 @@ footer {
   header {
     width: 100%;
     margin: 0;
+    height: 1400;
   }
 
   footer {
